Text wrapping issue fixed for track settings dialog. We now use a minimum width.
Former-commit-id: 53ff7cef3f90bee493a6e33dba6a371dfbbfc34d

--- a/css/igv.css
+++ b/css/igv.css
@@ -780,6 +780,8 @@ div.ui-dialog fieldset {
     top: 0;
     left: 0;
 
+    min-width: 128px;
+
     z-index: 1000;
 
     font-family: 'PT Sans', sans-serif;
